--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "alerting-bot-coin",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "dist/app.js",
+  "main": "app.js",
   "scripts": {
-    "start": "tsc && node ./dist/app.js"
+    "start": "node ./src/app.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "eslint": "^9.34.0",
-    "globals": "^16.3.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1"
   }
 }
