--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alerting-bot-coin",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "description": "",
   "main": "app.js",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "mongodb": "^6.18.0"
   }
 }
