--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "discord.js": "^14.22.1",
     "dotenv": "^17.2.1",
     "mongodb": "^6.18.0"
   }
