--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.11.0",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.1",
-    "mongodb": "^6.18.0"
+    "mongodb": "^6.18.0",
+    "node-cron": "^4.2.1"
   }
 }
