--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "eslint": "^9.34.0",
-    "globals": "^16.3.0"
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.3.0",
+    "typescript-eslint": "^8.41.0"
   },
   "dependencies": {
     "axios": "^1.11.0",
