--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "discord.js": "^14.22.1",
     "mongoose": "^8.18.0",
     "reflect-metadata": "^0.2.2",
