--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alerting-bot-coin",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "description": "",
   "author": "",
   "private": true,
@@ -47,6 +47,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
@@ -75,7 +76,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "moduleNameMapper": {
-      "src/(.*)": "<rootDir>/src/$1"
+      "src/(.*)": "<rootDir>/src/$1",
+      "test/(.*)": "<rootDir>/test/$1"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
