--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alerting-bot-coin",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "",
   "author": "",
   "private": true,
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
+    "@nestjs/swagger": "^11.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "discord.js": "^14.22.1",
